--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.3",
-        "uuid": "^8.3.0"
+        "react-scripts": "3.4.3"
     },
     "scripts": {
         "start": "react-scripts start",
