--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://vhk-services-api.herokuapp.com/"
+    "proxy": "http://localhost:5000/"
 }
